# video-manager

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  TASK_TRACKING.md  USAGE.md  eslint.config.js  package.json  pangu.config.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vite.config.ts
apps/video-manager/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/video-manager/src/: App.tsx
apps/video-manager/src-tauri/: Cargo.toml  tauri.conf.json
docs/: TAURI_GUIDE.md  libmpv-example.md  libmpv-integration.md
docs/rfc/: 0003-markdown-editor.md  0004-image-paste.md  0007-frontmatter-processing.md  0010-git-integration.md  0012-video-annotations.md  0014-path-based-tags.md  0015-transcode-recovery.md  0016-transcode-validation.md  0017-ui-refinements.md  0018-background-service.md  0020-design-system-high-fidelity.md  0021-path-based-tagging-search.md  README.md
docs/rfc/completed/: 0001-architecture.md  0002-workspace-initialization.md  0003-video-extraction.md  0005-video-extraction.md  0006-filesystem-operations.md  0008-folder-tree.md  0009-search-functionality.md  0011-local-video-library.md  (+2 more)
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  filesystem.rs  frontmatter.rs  git.rs  main.rs  native_video.rs  scanner.rs  search.rs  transcoder.rs  watcher.rs
src/components/: FolderSelectDialog.tsx  FolderTree.tsx  LibrarySidebar.tsx  MarkdownEditor.tsx  PlayerView.tsx  SearchBar.tsx  VideoGallery.tsx
src/utils/: format.ts
(+10 files in other folders)
