[package]
name = "video-manager"
version = "0.1.0"
description = "一个用于管理和组织视频的 Tauri 应用"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
git2 = "0.18"
regex = "1.10"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
# FFmpeg 用于原生视频解码
ffmpeg-next = "8.0"
image = "0.24"
base64 = "0.21"
notify = "6.1"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
urlencoding = "2.1.3"

[features]
# 默认启用自定义协议
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3.27.0"
